--- a/src/App.css
+++ b/src/App.css
@@ -39,17 +39,13 @@
   }
 }
 
-.App .welcome {
+.welcome {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  box-shadow:
-    inset 0px 0px 15px var(--amber-dark),
-    inset 0 0 5px var(--link-light);
-  animation: pulse 10s infinite;
 }
 
 @keyframes pulse {
